app completed with full user story capabality...bug with search term being a step behind

--- a/src/App.css
+++ b/src/App.css
@@ -3,14 +3,17 @@
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+  height: 10vmin;
+  align-self: center;
+  /* margin-top: auto;
+  margin-bottom: auto; */
 }
 
 .App-header {
-  background-color: #282c34;
+  background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQl6qmmYOlkxGHd80fs_t3GaayQDoatOHSNfmu4yK3eMNqBNtA97w');
+  background-repeat: round;
   min-height: 10vh;
+  min-width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -22,36 +25,37 @@
 .SearchBar {
   background-color: white;
   border-color: black;
-  color: lightgrey;
   min-height: 8vh;
-  max-width: 100vh;
+  min-width: auto;
   border-style: solid;
   margin-top: 10vh;
   margin-left: auto;
   margin-right: auto;
-  font-size: calc(30px + 2vmin);
+  font-size: xx-large;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
 }
 .DisplayBox {
-  background-color: lightgrey;
   min-height: 50vh;
   max-width: 300vh;
-  border-style: solid;
   margin-top: 10vh;
   margin-left: auto;
   margin-right: auto;
 }
 
-.App-link {
-  color: #61dafb;
+.GiphyCard{
+
+  max-height: auto;
+  max-width: auto;
+  margin: 20px;
+  position: relative;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.col-container {
+  display: flex;
+  width: 100%;
+}
+.col {
+  flex: 1;
+  padding: 16px;
 }
